[gd_scene load_steps=11 format=3 uid="uid://b6fvp0wup6fkc"]

[ext_resource type="Script" path="res://Screens/Battle/map/Unit.gd" id="1_ggmfr"]
[ext_resource type="Script" path="res://Screens/Battle/map/MapObject.gd" id="2_bodrt"]
[ext_resource type="Texture2D" uid="uid://drlkpesis0pbn" path="res://Screens/Battle/sprites/unit_shadow.png" id="3_n2i2l"]
[ext_resource type="PackedScene" uid="uid://ce6s6ofk01nub" path="res://Screens/Battle/map/UnitModel.tscn" id="4_q3tgg"]

[sub_resource type="Curve2D" id="Curve2D_wmi0i"]

[sub_resource type="LabelSettings" id="LabelSettings_cytam"]
font_size = 20
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_l7nvc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PathFollow2D/UnitModel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4d8wl"]
resource_name = "highlight"
length = 1.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PathFollow2D/UnitModel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.9, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.5, 1.5, 1.5, 1), Color(1.5, 1.5, 1.5, 0), Color(1.5, 1.5, 1.5, 1)]
}

[sub_resource type="Animation" id="Animation_1evga"]
resource_name = "highlight_red"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PathFollow2D/UnitModel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.431373), Color(1, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xege1"]
_data = {
"RESET": SubResource("Animation_l7nvc"),
"highlight": SubResource("Animation_4d8wl"),
"highlight_red": SubResource("Animation_1evga")
}

[node name="Unit" type="Path2D"]
position = Vector2(1011.36, 251.987)
curve = SubResource("Curve2D_wmi0i")
script = ExtResource("1_ggmfr")
walk_speed = 200.0

[node name="MapObject" type="Node" parent="."]
script = ExtResource("2_bodrt")
pathing_group = 1

[node name="Debug" type="ColorRect" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -139.0
offset_right = 30.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 1, 0, 1)

[node name="PathFollow2D" type="PathFollow2D" parent="."]
rotates = false
loop = false
metadata/_edit_group_ = true

[node name="Shadow" type="Sprite2D" parent="PathFollow2D"]
modulate = Color(0, 0, 0, 0.329412)
rotation = 0.522585
scale = Vector2(0.32573, 0.32573)
skew = 0.525625
texture = ExtResource("3_n2i2l")

[node name="UnitModel" parent="PathFollow2D" instance=ExtResource("4_q3tgg")]

[node name="HUD" type="Node2D" parent="PathFollow2D"]
position = Vector2(0, -15)

[node name="StatusEffects" type="HBoxContainer" parent="PathFollow2D/HUD"]
custom_minimum_size = Vector2(112, 32)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -159.0
offset_right = 84.0
offset_bottom = -127.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="rect" type="ColorRect" parent="PathFollow2D/HUD"]
offset_left = -57.0
offset_top = -189.0
offset_right = -47.0
offset_bottom = -179.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="maxhp_bar" type="ColorRect" parent="PathFollow2D/HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -171.0
offset_right = 59.0
offset_bottom = -164.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14902, 0.211765, 0.180392, 1)
metadata/_edit_use_anchors_ = true

[node name="hp_bar" type="ColorRect" parent="PathFollow2D/HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -172.0
offset_right = 58.0
offset_bottom = -165.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.384314, 0.819608, 0.470588, 1)
metadata/_edit_use_anchors_ = true

[node name="hp_label" type="Label" parent="PathFollow2D/HUD"]
offset_left = 14.0
offset_top = -181.0
offset_right = 54.0
offset_bottom = -150.0
label_settings = SubResource("LabelSettings_cytam")
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="name" type="Label" parent="PathFollow2D/HUD"]
offset_left = -43.0
offset_top = -196.0
offset_right = 4.0
offset_bottom = -170.0
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="PathFollow2D"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -33.0
offset_top = -136.0
offset_right = 33.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xege1")
}

[connection signal="selectable_changed" from="." to="." method="_on_selectable_changed"]
[connection signal="map_pos_changed" from="MapObject" to="." method="_on_map_object_map_pos_changed"]
[connection signal="world_changed" from="MapObject" to="." method="_on_map_object_world_changed"]
[connection signal="gui_input" from="PathFollow2D/Control" to="." method="_on_control_gui_input"]
